Update src/main/java/io/kestra/plugin/grafana/loki/QueryResultTrigger.java
Co-authored-by: François Delbrayelle <fdelbrayelle@gmail.com>